--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,55 +1,30 @@
 ---
 layout: index-layout
-subject: My Email Templates
+subject: GSWNT Resource Round-up Archive
 ---
-
-<spacer size="16"></spacer>
 
 <container>
 
-  <spacer size="24"></spacer>
-  
   <row>
     <columns small="12">
 
-    <p class="lead">Hi there!</p>
-    <p style="color: #484848; line-height: 1.5;">Thanks for downloading <a href="http://foundation.zurb.com/emails/docs/">Foundation for Emails!</a> Your days of coding up painful HTML emails are officially over. You’ll soon be cranking out some slick, responsive emails in no time! To help get you up and running, we've put together 11 templates for the most common email use cases including newsletters, transactional emails, and marketing blasts. Feel free to customize them to your hearts content.</p>
+    <p>Welcome to the GSWNT Resource Round-up Archive. Here you can access all the past issues of the newsletters sent out. If someone sent you a direct link to this page and you would like to subscribe to these newsletters, you can do so <a href="http://dev.gsw-w.com/gswntrr/index.html">here</a>.</p>
 
     <spacer size="16"></spacer>
 
     <center>
-      <menu class="vertical">
-        <item href="{{root}}basic.html" target="_blank">Basic Template</item>
-        <item href="{{root}}drip.html" target="_blank">Drip Template</item>
-        <item href="{{root}}hero.html" target="_blank">Hero Template</item>
-        <item href="{{root}}marketing.html" target="_blank">Marketing Template</item>
-        <item href="{{root}}newsletter.html" target="_blank">Newsletter Template</item>
-        <item href="{{root}}newsletter-2.html" target="_blank">Newsletter 2 Template</item>
-        <item href="{{root}}order.html" target="_blank">Order Template</item>
-        <item href="{{root}}password.html" target="_blank">Password Template</item>
-        <item href="{{root}}sidebar.html" target="_blank">Sidebar Template</item>
-        <item href="{{root}}sidebar-hero.html" target="_blank">Sidebar Hero Template</item>
-        <item href="{{root}}welcome.html" target="_blank">Welcome Template</item>
+      <menu class="">
+		<p>Vol. 001 - <a href="{{root}}rr-vol001.html" target="_blank">Welcome to the first installment of the GSWNT Resource Round-up.</a></p>
+		<p>Vol. 002 - <a href="{{root}}rr-vol002.html" target="_blank">Vol. 002 - Productivity Tips, Intro to Web Components and How to Improve User Experience - The Truth is Out There.</a></p>
+		<p>Vol. 003 - <a href="{{root}}rr-vol003.html" target="_blank">Presentations for Developers, A11Y and Deflating Pikachus.</a></p>
+		<p>Vol. 004 - <a href="{{root}}rr-vol004.html" target="_blank">The Data Visualization Issue.</a></p>
+		<p>Vol. 005 - <a href="{{root}}rr-vol005.html" target="_blank">Out of the (Drop)Shadows, Interactive Quiz in Emails and Leveraging Metrics to Inform UX - this is Vol. 005.</a></p>
+		<p>Vol. 006 - <a href="{{root}}rr-vol006.html" target="_blank"></a></p>
       </menu>
     </center>
-
-    <spacer size="16"></spacer>
-
-    <p>Happy Coding,</p>
-    <p>The Foundation Team</p>
-
-
-    <spacer size="16"></spacer>
 
     </columns>
   </row>
 </container>
 
-<spacer size="16"></spacer>
-
-<center>
-  <small>Keep on keepin' on. &lt;3 <a style="color: #cacaca; text-decoration: underline;" href="http://zurb.com/">ZURB</a> </small>
-</center>
-
-<spacer size="16"></spacer>
 
