updated archive(index) and subscribe links. added more to vol.006

--- a/src/pages/rr-vol006.html
+++ b/src/pages/rr-vol006.html
@@ -1,6 +1,6 @@
 ---
 subject: GSWNT Resource Round-up Vol. 006
-description: .
+description: Learn To Code With Me - The Tutorial Site Issue.
 layout: resource-roundup
 ---
 
@@ -15,7 +15,6 @@ layout: resource-roundup
 		<columns large="12">
 			<h5><a href="https://bento.io/">Bento</a></h5>
 			<p>Their mission is to inspire people to become programmers by making code accessible, affordable and fun. With over 200 topics, anything you've been thinking about learning, you can find here.</p>
-			<p><i>Topics taught: Shell, Git, Python, and more</i></p>
 		</columns>
 	</row>
 
@@ -23,7 +22,13 @@ layout: resource-roundup
 		<columns large="12">
 			<h5><a href="https://www.codecademy.com/">Codecademy</a></h5>
 			<p>Codecademy is where most people who are new to coding get their start. If you haven’t been to the site yet...where have you been!? The platform revolves around interactive learning; that is, you read a little, type you code right into the browser, and see results immediately.</p>
-			<p><i>Topics taught: HTML &amp; CSS, JavaScript, PHP, Python, Ruby, Angularjs, The Command Line, and more</i></p>
+		</columns>
+	</row>
+
+	<row>
+		<columns large="12">
+			<h5><a href="https://www.codeschool.com/">Code School</a></h5>
+			<p>Code School courses are organized into Paths based on technology. Navigate to find the right course for you.</p>
 		</columns>
 	</row>
 
@@ -31,7 +36,6 @@ layout: resource-roundup
 		<columns large="12">
 			<h5><a href="https://www.codewars.com/">Codewars</a></h5>
 			<p>Codewars offers a fun way to learn coding. With a martial-arts theme, the program is based on challenges called “kata.” Complete them to earn honor and progress to higher ranks.</p>
-			<p><i>Topics taught: TypeScript, JavaScript, Python, Ruby, Java, Clojure, Haskell, and more</i></p>
 		</columns>
 	</row>
 
@@ -39,7 +43,6 @@ layout: resource-roundup
 		<columns large="12">
 			<h5><a href="https://www.coursera.org/">Coursera</a></h5>
 			<p>Large online course library, where classes are taught by real university professors. All courses are free of charge, but you have the option to pay for a “Coursera Verified Certificate” to prove course completion.</p>
-			<p><i>Topics taught: Many</i></p>
 		</columns>
 	</row>
 
@@ -47,7 +50,13 @@ layout: resource-roundup
 		<columns large="12">
 			<h5><a href="http://exercism.io/">Exercism</a></h5>
 			<p>Learning to program is exhilarating and challenging... and also frustrating, exhausting, and overwhelming. Exercism provides countless small wins. The exercises are achievable mini-quests: small and well-defined, and with enough complexity to uncover bite-sized knowledge gaps.</p>
-			<p><i>Topics taught: TypeScript, Lisp, Haskell, JavaScript, Python, and more</i></p>
+		</columns>
+	</row>
+
+	<row>
+		<columns large="12">
+			<h5><a href="https://learnxinyminutes.com/">Learn X in Y Minutes</a></h5>
+			<p>A community-driven site, that shows you a language in the language. There aren't tutorials to watch or mini-projects to build, just Code documentation written as code.</p>
 		</columns>
 	</row>
 
@@ -55,7 +64,20 @@ layout: resource-roundup
 		<columns large="12">
 			<h5><a href="https://ocw.mit.edu/index.htm">MIT OpenCourseware</a></h5>
 			<p>Competition to get into MIT may be stiff, but accessing their course material has no minimum SAT score. They maintain an online library of every subject they teach, with no account required for access.</p>
-			<p><i>Topics taught: All kinds of wonderful things</i></p>
+		</columns>
+	</row>
+
+	<row>
+		<columns large="12">
+			<h5><a href="https://www.pluralsight.com/">Pluralsight</a></h5>
+			<p>Pluralsight's mission is as such: "We believe everyone should have the opportunity to build a career they’re passionate about. We’ve gone beyond the traditional education model to put the power back in your hands, because we believe learning shouldn’t be confined to a classroom, rigorous schedule or select minority."</p>
+		</columns>
+	</row>
+
+	<row>
+		<columns large="12">
+			<h5><a href="https://www.sololearn.com/">SoloLearn</a></h5>
+			<p>SoloLearn is a social platform where anyone can learn to code. It's different to other course providers because it's mobile-based – learn on the go, on any device. With bite-sized lessons, achievements to unlock and interactive quizzes, it's fun to learn and free to download.</p>
 		</columns>
 	</row>
 
@@ -63,7 +85,8 @@ layout: resource-roundup
 		<columns large="12">
 			<h5><a href="https://www.udacity.com/">Udacity</a></h5>
 			<p>Offers individual courses, as well as “nanodegrees” that train you for specific careers like front-end web developer or data analyst. Course materials are free, but nanodegrees require a tuition fee.</p>
-			<p><i>Topics taught: Many</i></p>
 		</columns>
 	</row>
+
+
 </container>
