updated intro for vol 006

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,7 +8,7 @@ subject: GSWNT Resource Round-up Archive
   <row>
     <columns small="12">
 
-    <p>Welcome to the GSWNT Resource Round-up Archive. Here you can access all the past issues of the newsletters sent out. If someone sent you a direct link to this page and you would like to subscribe to these newsletters, you can do so <a href="http://dev.gsw-w.com/gswntrr/index.html">here</a>.</p>
+    <p>Welcome to the GSWNT Resource Round-up Archive. Here you can access all the past issues of the newsletters sent out. If someone sent you a direct link to this page and you would like to subscribe to these newsletters, you can do so <a href="http://dev.gsw-w.com/gswntrr/subscribe.html">here</a>.</p>
 
     <spacer size="16"></spacer>
 
