updated signature. added vol007

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,7 +19,8 @@ subject: GSWNT Resource Round-up Archive
 		<p>Vol. 003 - <a href="{{root}}rr-vol003.html" target="_blank">Presentations for Developers, A11Y and Deflating Pikachus.</a></p>
 		<p>Vol. 004 - <a href="{{root}}rr-vol004.html" target="_blank">The Data Visualization Issue.</a></p>
 		<p>Vol. 005 - <a href="{{root}}rr-vol005.html" target="_blank">Out of the (Drop)Shadows, Interactive Quiz in Emails and Leveraging Metrics to Inform UX - this is Vol. 005.</a></p>
-		<p>Vol. 006 - <a href="{{root}}rr-vol006.html" target="_blank">Learn To Code With Me - The Tutorial Site Issue.</a></p>
+    <p>Vol. 006 - <a href="{{root}}rr-vol006.html" target="_blank">Learn To Code With Me - The Tutorial Site Issue.</a></p>
+    <p>Vol. 007 - <a href="{{root}}rr-vol007.html" target="_blank">The #a11y Issue.</a></p>
       </menu>
     </center>
 
