random commits sitting in the wind

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,28 +2,23 @@
 layout: index-layout
 subject: GSWNT Resource Round-up Archive
 ---
-
 <container>
-
   <row>
     <columns small="12">
-
-    <p>Welcome to the GSWNT Resource Round-up Archive. Here you can access all the past issues of the newsletters sent out. If someone sent you a direct link to this page and you would like to subscribe to these newsletters, you can do so <a href="http://dev.gsw-w.com/gswntrr/subscribe.html">here</a>.</p>
-
-    <spacer size="16"></spacer>
-
-    <center>
-      <menu class="">
-		<p>Vol. 001 - <a href="{{root}}rr-vol001.html" target="_blank">Welcome to the first installment of the GSWNT Resource Round-up.</a></p>
-		<p>Vol. 002 - <a href="{{root}}rr-vol002.html" target="_blank">Vol. 002 - Productivity Tips, Intro to Web Components and How to Improve User Experience - The Truth is Out There.</a></p>
-		<p>Vol. 003 - <a href="{{root}}rr-vol003.html" target="_blank">Presentations for Developers, A11Y and Deflating Pikachus.</a></p>
-		<p>Vol. 004 - <a href="{{root}}rr-vol004.html" target="_blank">The Data Visualization Issue.</a></p>
-		<p>Vol. 005 - <a href="{{root}}rr-vol005.html" target="_blank">Out of the (Drop)Shadows, Interactive Quiz in Emails and Leveraging Metrics to Inform UX - this is Vol. 005.</a></p>
-    <p>Vol. 006 - <a href="{{root}}rr-vol006.html" target="_blank">Learn To Code With Me - The Tutorial Site Issue.</a></p>
-    <p>Vol. 007 - <a href="{{root}}rr-vol007.html" target="_blank">The #a11y Issue.</a></p>
-      </menu>
-    </center>
-
+      <p>Welcome to the GSWNT Resource Round-up Archive. Here you can access all the past issues of the newsletters sent out. If someone sent you a direct link to this page and you would like to subscribe to these newsletters, you can do so <a href="http://dev.gsw-w.com/gswntrr/subscribe.html">here</a>.</p>
+      <spacer size="16"></spacer>
+      <center>
+        <menu class="">
+          <p><a href="{{root}}rr-vol001.html" target="_blank">Vol. 001</a> - Welcome to the first installment of the GSWNT Resource Round-up.</p>
+          <p><a href="{{root}}rr-vol002.html" target="_blank">Vol. 002</a> - Productivity Tips, Intro to Web Components and How to Improve User Experience - The Truth is Out There.</p>
+          <p><a href="{{root}}rr-vol003.html" target="_blank">Vol. 003</a> - Presentations for Developers, A11Y and Deflating Pikachus.</p>
+          <p><a href="{{root}}rr-vol004.html" target="_blank">Vol. 004</a> - The Data Visualization Issue.</p>
+          <p><a href="{{root}}rr-vol005.html" target="_blank">Vol. 005</a> - Out of the (Drop)Shadows, Interactive Quiz in Emails and Leveraging Metrics to Inform UX - this is Vol. 005.</p>
+          <p><a href="{{root}}rr-vol006.html" target="_blank">Vol. 006</a> - Learn To Code With Me - The Tutorial Site Issue.</p>
+          <p><a href="{{root}}rr-vol007.html" target="_blank">Vol. 007</a> - The #a11y Issue.</p>
+          <p><a href="{{root}}rr-vol008.html" target="_blank">Vol. 008</a> - Fun Links For Fun People</p>
+        </menu>
+      </center>
     </columns>
   </row>
 </container>
