--- a/src/pages/rr-vol001.html
+++ b/src/pages/rr-vol001.html
@@ -66,12 +66,12 @@ layout: resource-roundup
         <h5><a href="http://codepen.io/JZL/pen/VpdOVp">Isometric Alphabet Animation</a></h5>
         <p>Jeselle Obina crated an alphabet of SVG isometric animations with a line-drawing motif</p>
     </columns>
-  </row> 
+  </row>
   <row>
       <columns large="12">
         <h3>CSS Grid</h3>
       </columns>
-  </row> 
+  </row>
   <row>
     <columns large="12">
         <h5><a href="http://griddy.io/">Griddy</a></h5>
@@ -102,14 +102,14 @@ layout: resource-roundup
   </row>
   <row>
       <columns large="12">
-        <h5><a href="https://aws.amazon.com/blogs/aws/new-aws-codestar/">Amazon debuts AWS CodeStar</a>
+        <h5><a href="https://aws.amazon.com/blogs/aws/new-aws-codestar/">Amazon debuts AWS CodeStar</a></h5>
         <p>Quickly develop, build, and deploy applications on Amazon Web Services with AWS CodeStar, a tool providing templated provisioning for IaaS, PaaS, and serverless deployment targeting JavaScript, Java, Python, Ruby, and PHP.</p>
       </columns>
   </row>
   <row>
       <columns large="12">
         <h5><a href="https://uncubed.com/learn/class/how-peloton-scales-aws-during-tv-ads">Moving from ELB to ALB</a></h5>
-        <p>How Peloton Uses AWS Scaling During TV Ads</p>  
+        <p>How Peloton Uses AWS Scaling During TV Ads</p>
       </columns>
   </row>
   <row>
@@ -120,7 +120,7 @@ layout: resource-roundup
   <row>
       <columns large="12">
         <h5><a href="http://engineering.wingify.com/across-tabs/introduction.html">Across-Tabs</a></h5>
-        <p>Easily communicate among browser tabs</p>  
+        <p>Easily communicate among browser tabs</p>
       </columns>
   </row>
   <row>
